[package]

name = "labyrinth"
version = "0.0.3"
authors = [ "Rafał Michalski <royal@yeondir.com>" ]

publish = false

description = "The labyrinth generator"
homepage = "https://github.com/royaltm/rust-labyrinth"
repository = "https://github.com/royaltm/rust-labyrinth.git"
keywords = ["labyrinth"]

readme = "README.md"
license-file = "LICENSE"

[[bin]]
name = "labyrinth"
doc = false
test = false

[lib]

doc = true
test = true

[dependencies]

num_cpus = "1.14"
threadpool = "1.8"
rand = "0.8"
# rustc-serialize = "0.3"
# serde_json = "0.7"
